<resources>
    <string name="app_name">FoodRunner</string>
    <string name="foodrunner_logo">FoodRunner Logo</string>
    <string name="food_runner_logo">Food Runner Logo</string>
    <string name="mobile_number_10_digit">Mobile Number (10 digit)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account? Sign up now</u></string>
    <string name="name_min_3_character">Name  (Min. 3 character)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter Your registered mobile number and email below:</string>
    <string name="preference_file_name">Food Runner Preferences</string>
    <string name="welcome_to_food_runner_s_home">Welcome to Food Runner\'s Home</string>
    <string name="logout">Logout</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="name_of_the_restaurant">name of the restaurant</string>
    <string name="_280_person">280/person</string>
    <string name="_4_5">4.5</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurant">Favorite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="higher_order_functionality">Higher Order Functionality</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="action_sort">Sort</string>
    <string name="question1">Q1. How does this work?</string>
    <string name="answer1">A1. We deliver for our customers from anywhere our customers would like. We take your order by internet and place it with the restaurant. We dispatch a meal courier to pick up the food, pack it in an insulated carrier and deliver it directly to you. Usually, your meal courier will be waiting at the restaurant when the food comes out of the kitchen. We are not affiliated with some of the restaurants and in no way are we claiming to be in business with some of the businesses listed, unless otherwise stated. We also offer grocery delivery services for those who are interested.</string>
    <string name="question2">Q2. How can I place my order?</string>
    <string name="answer2">A2. You can place your order online at www.foodrunner.com or with our free android app</string>
    <string name="question3">Q3. Do you have a delivery fee?</string>
    <string name="answer3">A3. Yes, our delivery fee varies depending on the restaurant. and locations Most restaurants have a Rs.50 delivery fee and if the fee differs, the price will be shown when you hover your mouse over the name of the restaurant.</string>
    <string name="question4">Q4. Are the prices different than at the restaurant?</string>
    <string name="answer4">A4.  We do have a service fees of 10% for our non-partnered restaurants service fee vary depending of the location.</string>
    <string name="question5">Q5. What can be the estimated cost of your restaurant app development service?</string>
    <string name="answer5">A5. Every project has its own requirements and we take a unique and fresh approach for the same. Depending on the scope, features and type of project, the cost of the application varies.</string>
    <string name="question6">Q6. What payment methods you offer in your ordering system software?</string>
    <string name="answer6">A6. There are a plethora of payment options available for the easy checkout of your customers. COD (Cash on Delivery), CC (Credit Card), DC (Debit Card) and third party on request. The other payment methods can also be added as per region and client request.</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>
    <string name="_91_1234567890">+91–1234567890</string>
    <string name="token">5c947d4be3f496</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_history">Order History</string>
    <string name="john_doe">John Doe</string>
    <string name="_91_1115555555">+91–1115555555</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any restaurant with that name…</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="item_name">Item Name</string>
    <string name="price">price</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="fav_preferences">favourite preferences</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="ok">OK</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below :</string>
    <string name="date">date</string>
    <string name="_23_08_2021">23/08/2021</string>
    <string name="remove">Remove</string>
    <string name="total">Total :</string>
</resources>