<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeD"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favoriteRestaurant"
            android:icon="@drawable/ic_favorite_restaurant"
            android:title="@string/favorite_restaurant" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />

        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>