<?xml version="1.0" encoding="UTF-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    tools:context=".fragment.FAQsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/answer1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/answer2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/answer3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/answer4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/answer5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/answer6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/darker_gray" />


    </LinearLayout>

</ScrollView>