<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/groupRadio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RadioButton
        android:id="@+id/radio_low_to_high"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/cost_low_to_high"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radio_high_to_low"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/cost_high_to_low"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radio_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/rating"
        android:textSize="20sp" />

</RadioGroup>


