<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity">

    <ImageView
        android:id="@+id/btnBackReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/image"
        android:padding="5dp"
        android:src="@drawable/ic_back_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/register_yourself"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="6dp"
        android:hint="@string/name_min_3_character"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="6dp"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:drawablePadding="6dp"
        android:hint="@string/mobile_number_10_digit"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_delivery_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="6dp"
        android:hint="@string/delivery_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="150"
        android:maxLines="2"
        android:padding="8dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_delivery_address"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:hint="@string/password_min_4_characters"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/red"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>