<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@color/background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:padding="10dp"
        android:src="@drawable/ic_current_user" />

    <TextView
        android:id="@+id/txtDrawerHeaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAvatar"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/john_doe"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDrawerHeaderMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDrawerHeaderName"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/_91_1115555555"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>