<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@color/background"
    tools:context=".fragment.MyProfileFragment">


    <ImageView
        android:id="@+id/imgCurrentUser"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/image"
        android:padding="10dp"
        android:src="@drawable/ic_current_user" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCurrentUser"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawablePadding="4dp"
        android:padding="10dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawablePadding="4dp"
        android:padding="10dp"
        android:text="@string/_91_1234567890"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMobileNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawablePadding="4dp"
        android:padding="10dp"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_for_view"
        android:drawablePadding="4dp"
        android:padding="10dp"
        android:text="@string/delivery_address"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>
