<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rlCartSingleRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imgCartDash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/cart_red_dash" />

        <TextView
            android:id="@+id/txtOrderItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/imgCartDash"
            android:padding="10dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtOrderItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>